fix: change gap between 2 lines of li in help section on main page

--- a/shelter/pages/main/main.css
+++ b/shelter/pages/main/main.css
@@ -195,7 +195,7 @@
 }
 
 .help .help-content {
-  margin: 80px 40px 100px;
+  margin: 80px 40px 45px;
 }
 .help .help-content h3 {
   font-family: Georgia, Verdana, serif;
@@ -215,7 +215,7 @@
   text-align: center;
 }
 .help .help-content ul li {
-  margin: 0 60px;
+  margin: 0 60px 55px;
 }
 .help .help-content ul li img {
   width: 60px;
