--- a/shelter/sass/components/help.scss
+++ b/shelter/sass/components/help.scss
@@ -1,6 +1,6 @@
 .help {
   .help-content {
-    margin: 80px 40px 100px;
+    margin: 80px 40px 45px;
     h3 {
       @include h3();
       text-align: center;
@@ -11,14 +11,9 @@
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
-
-      // display: grid;
-      // grid-template-columns: repeat(5, auto);
-      // grid-template-rows: 1fr;
-      // row-gap: 55px;
       text-align: center;
       li {
-        margin: 0 60px;
+        margin: 0 60px 55px;
         img {
           width: 60px;
           height: 60px;
